<resources>
    <string name="app_name">AOne_Sample</string>
    <string name="action_settings">Settings</string>
    <string name="actionOther">Other</string>
    <string name="actionExit">Exit</string>
    <string name="activity3Text">Well !!! this is activity three</string>
    <string name="click_on_activity_2">Click on Activity 2</string>
    <string name="click_on_activity_3">Click on Activity 3</string>
    <string name="toast_activity_2">See Toast</string>
    <string name="close">Close</string>
    <string name="Bottom_Text">This is the bottom text</string>
    <string name="buttonClick">Click on this button</string>
    <string name="TextOnClick_FirstTop">Clicked 1 !!!</string>
    <string name="button2Text">Click on button 2 !!!</string>
    <string name="button2ShowText">Clicked on second button !!!!</string>
    <string name="click_on_activity_4">Activity 4 - Render back post value</string>
    <string name="courseDesc">This is the place where each individual  course\'s description will appear</string>
    <string name="explore_fragments">Explore Fragments</string>
    <string name="android_fragments_title">Improving User Interface Design with Android Fragments</string>
    <string name="android_fragments_description">Fragments now replace Activities as the primary canvas for UI design. Fragments address a number of key UI design issues. In this course we discuss how to use Fragments to improve your app’s adaptability to device differences, provider better UI modularization, and much more.</string>
    <string name="android_intents_title">Android Programming with Intents</string>
    <string name="android_intents_description">Virtually all interactivity between Android components occurs through a special messaging concept known as intents. In this course you will learn how to work effectively with and capitalize on the many capabilities of the Android platform provided through intents.</string>
    <string name="android_action_bar_title">Improving UI Interaction with Android ActionBar</string>
    <string name="android_action_bar_description">The ActionBar incorporates a variety of previously disparate user interaction concepts into a single control. The ActionBar provides one-stop shopping for menu management, home and back behavior, tabbed displays, screen layout adaptability, and many more user interaction concepts.</string>
    <string name="android_photo_video_title">Android Photo and Video Programming</string>
    <string name="android_photo_video_description">In this course we discuss how to capitalize on the Android camera within your apps to capture still photos and video. We look at both the simple case of leveraging the built-in camera app and the more detailed scenario of direct camera control.</string>
    <string name="android_4_features_title">Android 4.0 New Features</string>
    <string name="android_4_features_description">Android 4.0 includes a number of new developer features that improve the ability for applications to support a wide variety of devices and enhance developer productivity. In this course we will exam many of these new features including Android user interface Fragments, the ActionBar, networking features, and the new Calendar API.</string>
    <string name="android_location_apps_title">Android Location-Based Apps</string>
    <string name="android_location_apps_description">In this course we cover the wide range of location capabilities of the Android platform including determining user location, power management, translating location data into human-readable street addresses, and much more.</string>
    <string name="android_async_services_title">Android Async Programming and Services</string>
    <string name="android_async_services_description">In this course you will learn how to use Android services and asynchronous processing to create apps that provide a more responsive UX. Topics covered include Android Services, background processing, threading, async tasks, Started Services, Foreground Services, Notifications, Android Service lifecycle, and ExecutorService.</string>
    <string name="android_fragments_title_short">Fragments</string>
    <string name="android_intents_title_short">Intents</string>
    <string name="android_action_bar_title_short">ActionBar</string>
    <string name="android_photo_video_title_short">Photo/Video</string>
    <string name="android_4_features_title_short">Android 4</string>
    <string name="android_location_apps_title_short">Location</string>
    <string name="android_async_services_title_short">Services</string>
    <string name="imgShow_Picture_Cam_Desc">This primarily takes photo and displays accordingly.</string>
    <string name="fragment_image">For Fragment_Image</string>
    <string name="this_is_first_top_text">This is first top text</string>
    <string name="this_is_a_second_top_text">This is a second top text</string>
    <string name="provide_information">Provide Information</string>
    <string name="take_picture">Take Picture</string>
    <string name="send">Send</string>
    <string name="radio_button_option_one_clicked">Radio Button option one clicked</string>
    <string name="radio_button_option_2_clicked">Radio Button option 2 clicked</string>
    <string name="radio_button_option_3_clicked">Radio Button option 3 clicked</string>
    <string name="radio_button_option_4_clicked">Radio Button option 4 clicked</string>
    <string name="select_course">Select Course</string>
    <string name="done">Done</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="title_activity_swipe_navigation_main">SwipeNavigationMain</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="swipe_nav_pre_course_desc">Android 4.0 includes a number of new developer features that improve the ability for applications to support a wide variety of devices and enhance developer productivity. In this course we will exam many of these new features including Android user interface Fragments, the ActionBar, networking features, and the new Calendar API.</string>
    <string name="swipe_navigation_fragments">Swipe Navigation - Fragments</string>
    <string name="image_for_showing">Image for showing</string>
    <string name="this_is_the_place_where_each_individual_course_s_description_will_appear">This is the place where each individual course\'s description will appear</string>
    <string name="action_view">View</string>
    <string name="action_contents">Contents</string>
    <string name="action_website">Website</string>
    <string name="action_description">Description</string>
    <string name="action_assessment">Assessment</string>
    <string name="action_exercises">Exercises</string>
    <string name="action_refs">Related References</string>
    <string name="title_action_view">View Video</string>
    <string name="title_action_contents">Table of Contents</string>
    <string name="title_action_website">Website</string>
    <string name="title_action_description">See Description</string>
    <string name="title_action_assessment">Take Assessment</string>
    <string name="title_action_exercises">Download Exercises</string>
    <string name="title_action_refs">Visit Related References</string>
    <string name="title_activity_swipe_nav2">SwipeNav2</string>
    <string name="scroll_navigation_fragments">Scroll - Navigation Fragments</string>
    <string name="title_actions_activity_swipe_nav2">Swipe Navigation Actions Activity Class</string>
    <string name="is_this_a_navigation_drawer">Is this a Navigation Drawer!!!!</string>
    <string name="navigation_drawer_sole">Navigation Drawer - Sole</string>
    <string name="drawerText1">Drawer</string>

    <string name="open_drawer_message">Open course categories</string>
    <string name="close_drawer_message">Close course categories</string>
    <string name="title_activity_implicit_intents">Implicit Intents Activity</string>
    <string name="make_call">Make Call</string>
    <string name="show_a_web_page">Show a Web Page!</string>
    <string name="browse_a_course">Browse a Course...</string>
    <string name="explore_implicit_intents">Explore Implicit Intents</string>
    <string name="title_activity_app_model_basic">AppModel - Basic Broadcast</string>
    <string name="title_activity_app_model_basic_other">AppModelBasicOther</string>
    <string name="launch_other_activity">Launch Other Activity</string>
    <string name="monitor_airplane_mode_activity">Monitor Airplane Mode (Activity)</string>
    <string name="monitor_airplane_mode_app">Monitor Airplane Mode (App)</string>
    <string name="stop_monitoring_airplane_mode_app">Stop Monitoring Airplane Mode (App)</string>
    <string name="app_model_basic_broadcast_receivers">App Model - Basic Broadcast Receivers</string>
    <string name="title_activity_app_threading_mechanism">AppThreadingMechanism</string>
    <string name="app_threading_mechanism">App - Threading Mechanism</string>
    <string name="write_to_file">Write to file</string>
    <string name="write_to_file_asynctask">Write to file (AsyncTask)</string>
    <string name="send_message_to_handler">Send Message to Handler</string>
    <string name="call_runnable_on_handler">Call Runnable on Handler</string>
    <string name="start_location_montioring">Start Location Montioring</string>
    <string name="stop_location_monitoring">Stop Location Monitoring</string>
    <string name="title_activity_background_work_service">BackgroundWorkServiceActivity</string>
    <string name="service_background_work">Service - Background Work</string>
    <string name="do_long_running_work">Do Long Running Work</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="title_activity_broadcast_receiver_battery_status">
        BroadcastReceiverBatteryStatusActivity
    </string>
    <string name="broadcast_receiver_battery_status">Broadcast Receiver - Battery Status</string>
    <string name="start_battery_status_log">Start Battery Status Log</string>
    <string name="stop_battery_status_log">Stop Battery Status Log</string>
    <string name="battery_status_image">Battery Status Image</string>
    <string name="test_another_app_intent_service">Test - Another App - Intent Service</string>
</resources>
