<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.a454203.aone_sample.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_other"
        android:title="@string/actionOther" />
    <item
        android:id="@+id/action_activity2"
        android:title="@string/click_on_activity_2" />
    <item
        android:id="@+id/action_activity3"
        android:title="@string/click_on_activity_3" />
    <item
        android:id="@+id/action_activity4"
        android:title="@string/click_on_activity_4" />
    <item
        android:id="@+id/actionFragment"
        android:title="@string/explore_fragments" />
    <item
        android:id="@+id/actionScrollNavigation"
        android:title="@string/scroll_navigation_fragments" />
    <item
        android:id="@+id/actionSwipeNavigation"
        android:title="@string/swipe_navigation_fragments" />
    <item
        android:id="@+id/actionNavigationDrawer"
        android:title="@string/navigation_drawer_sole" />
    <item
        android:id="@+id/actionImplicitIntents"
        android:title="@string/explore_implicit_intents" />
    <item
        android:id="@+id/actionAppModelBasic"
        android:title="@string/app_model_basic_broadcast_receivers" />
    <item
        android:id="@+id/actionExit"
        android:title="@string/actionExit" />

</menu>
