<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.a454203.aone_sample.SwipeNavigationMainActivity">
    <item android:id="@+id/action_view"
        android:title="@string/action_view"
        android:icon="@android:drawable/ic_menu_view"
        app:showAsAction="always|withText" />
    <item android:id="@+id/action_contents"
        android:title="@string/action_contents"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_description"
        android:title="@string/action_description"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_assessment"
        android:title="@string/action_assessment"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_exercises"
        android:title="@string/action_exercises"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />
</menu>
