<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a454203.aone_sample.ImplicitIntentsActivity">

    <Button
        android:id="@+id/makeCallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/make_call"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="76dp" />

    <Button
        android:id="@+id/showWebPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/makeCallButton"
        android:layout_alignLeft="@+id/makeCallButton"
        android:layout_alignRight="@+id/makeCallButton"
        android:layout_alignStart="@+id/makeCallButton"
        android:layout_below="@+id/makeCallButton"
        android:text="@string/show_a_web_page"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="157dp" />

    <Button
        android:id="@+id/browseCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/showWebPage"
        android:layout_alignLeft="@+id/showWebPage"
        android:layout_alignRight="@+id/showWebPage"
        android:layout_alignStart="@+id/showWebPage"
        android:layout_below="@+id/showWebPage"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/browse_a_course" />
</RelativeLayout>
